--- a/D5/prediction.tex
+++ b/D5/prediction.tex
@@ -1,5 +1,135 @@
-\section{Predictive Models}
+\section{Linear Regression (Linear Probability Model)}
 
-\subsection{Linear Regression}
+\subsection{Objective}
+The objective of this section is to identify which customer characteristics are associated with the probability of responding to a marketing campaign. The dependent variable is \texttt{Response}, a binary indicator equal to 1 if the customer responded to the campaign and 0 otherwise.
 
-\subsection{Logistical Regression}
+\subsection{Methodology}
+We fitted a linear regression model using \texttt{lm()} with \texttt{Response} as the dependent variable. Since the outcome is binary, the resulting model is a \textit{Linear Probability Model (LPM)}. In this setting, each coefficient represents an additive change in the probability of response, holding other variables constant.
+
+We started from a full model including demographic, behavioural, spending, and past-campaign variables (m4). To improve interpretability while maintaining explanatory power, we applied a stepwise selection based on AIC, obtaining a more parsimonious final model (m\_step). The analysis was performed on 2031 observations.
+
+\subsection{Reference Categories}
+Categorical variables are interpreted with respect to reference levels. In our case:
+\begin{itemize}
+    \item \textbf{Education reference:} \textit{2n Cycle}
+    \item \textbf{Marital status reference:} \textit{Divorced}
+\end{itemize}
+
+\subsection{Model Selection: Full vs Reduced Model}
+Table~\ref{tab:model_comparison} compares the full model (m4) and the reduced model (m\_step). The reduced model uses fewer predictors while achieving essentially the same explanatory performance, therefore it is preferred for reporting due to parsimony.
+
+\begin{table}[H]
+\centering
+\begin{tabular}{lccc}
+\toprule
+Model & \# Predictors & Adjusted $R^2$ & Residual SE \\
+\midrule
+m4 & 30 & 0.3065 & 0.300 \\
+m\_step & 23 & 0.3079 & 0.300 \\
+\bottomrule
+\end{tabular}
+\caption{Comparison between the full model (m4) and the reduced model (m\_step). The reduced model retains similar explanatory power with fewer variables.}
+\label{tab:model_comparison}
+\end{table}
+
+\paragraph{Optional visual comparison.}
+Figure~\ref{fig:compare_resid_fitted} provides a side-by-side comparison of the ``Residuals vs Fitted'' diagnostic for m4 and m\_step. Patterns remain similar, showing that selection improves interpretability but does not remove structural limitations of using a linear model with a binary outcome.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.95\textwidth]{Images/compare_resid_fitted_m4_vs_mstep.png}
+\caption{Residuals vs Fitted for the full model (m4) and the reduced model (m\_step).}
+\label{fig:compare_resid_fitted}
+\end{figure}
+
+\subsection{Final Model (m\_step) Performance}
+The final model is statistically significant overall (F-test, $p < 2.2 \times 10^{-16}$) and explains approximately 31\% of the variability in campaign response (Adjusted $R^2 = 0.3079$). This level of explanatory power is reasonable given the binary nature of the dependent variable.
+
+\subsection{Interpretation of Key Effects (m\_step)}
+This section focuses on practically meaningful effects, expressed in \textit{percentage points (pp)} as changes in response probability.
+
+\paragraph{Previous campaign acceptance (strong behavioural persistence).}
+Previous acceptance of campaigns is the strongest driver in the model. Customers who accepted at least one previous campaign show substantially higher response probability in the current campaign. Depending on the campaign indicator, past acceptance increases response probability by approximately \textbf{11 to 26 percentage points}, highlighting strong behavioural persistence.
+
+\paragraph{Recency (customer activity).}
+Recency has a strong negative association with response probability. An increase of \textbf{10 units} in \texttt{Recency} reduces the probability of response by approximately \textbf{2.4 percentage points}. This indicates that customers who have not interacted recently are less likely to respond.
+
+\paragraph{Household composition.}
+Household context matters: having one additional teenager in the household reduces the probability of response by approximately \textbf{6 percentage points}, suggesting systematic differences in responsiveness across household profiles.
+
+\paragraph{Online engagement and purchasing behaviour.}
+Digital engagement is positively associated with response. Each additional web visit increases the probability of response by approximately \textbf{1.6 percentage points}, and each additional web purchase increases it by about \textbf{0.7 percentage points}. In contrast, each additional store purchase is associated with a decrease of about \textbf{1.5 percentage points} in response probability, reflecting behavioural differences between offline and online customers. Deal-oriented purchasing is positively associated with response: each additional deal purchase increases response probability by around \textbf{1.3 percentage points}.
+
+\paragraph{Spending patterns (interpretable scaling).}
+Spending in some product categories is positively associated with response. For instance, an increase of \textbf{100 monetary units} in \texttt{MeatExp} increases the probability of response by approximately \textbf{2.9 percentage points}. Similarly, an increase of \textbf{100 monetary units} in \texttt{GoldExp} increases response probability by about \textbf{3.8 percentage points}.
+
+\paragraph{Demographics.}
+Education and marital status show meaningful associations. Customers with a PhD exhibit a higher response probability than the reference education group, whereas married and cohabiting customers show lower response probability relative to divorced customers.
+
+\subsection{Key Figures for the Report}
+
+\paragraph{Coefficient plot (global view of effects).}
+Figure~\ref{fig:coefplot} provides a compact overview of estimated effects (with 95\% confidence intervals). It highlights that campaign-acceptance variables and \texttt{Recency} dominate the magnitude of effects in the final model.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\textwidth]{Images/coefplot_m_step.png}
+\caption{Final LPM coefficients (m\_step) with 95\% confidence intervals. Effects are interpreted as changes in $P(\text{Response}=1)$.}
+\label{fig:coefplot}
+\end{figure}
+
+\paragraph{Distribution of fitted values (LPM limitation).}
+Figure~\ref{fig:fitted_dist} shows the distribution of fitted values. Because the model is linear, fitted values may fall outside the $[0,1]$ range, illustrating a known limitation of the LPM when modelling binary outcomes.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{Images/fitted_distribution_m_step.png}
+\caption{Distribution of fitted values from the LPM (m\_step). Vertical dashed lines mark 0 and 1.}
+\label{fig:fitted_dist}
+\end{figure}
+
+\paragraph{Residuals vs Fitted (m\_step).}
+Figure~\ref{fig:residuals_fitted} displays the typical band structure produced by a binary response, and indicates heteroscedasticity, which is expected under an LPM.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{Images/residuals_fitted_m_step.png}
+\caption{Residuals versus fitted values for the final model (m\_step).}
+\label{fig:residuals_fitted}
+\end{figure}
+
+\paragraph{Q-Q plot of residuals.}
+Figure~\ref{fig:qq_plot} shows deviations from normality, especially in the tails. This behaviour is consistent with the binary outcome and supports that classical linear-regression assumptions are not fully satisfied.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{Images/qq_plot_m_step.png}
+\caption{Q-Q plot of residuals for the final model (m\_step).}
+\label{fig:qq_plot}
+\end{figure}
+
+\paragraph{Influential observations (Cook's distance).}
+Figure~\ref{fig:cook} highlights a small number of influential observations. Such points may disproportionately affect coefficient estimates and should be considered when interpreting results.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{Images/cooks_distance_m_step.png}
+\caption{Cook's distance for the final model (m\_step).}
+\label{fig:cook}
+\end{figure}
+
+\paragraph{Recency effect visualization.}
+Figure~\ref{fig:recency} visually confirms the negative association between \texttt{Recency} and response probability described above.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\textwidth]{Images/response_vs_recency.png}
+\caption{LPM fit for \texttt{Response} vs \texttt{Recency}.}
+\label{fig:recency}
+\end{figure}
+
+\subsection{Limitations}
+Although the LPM is interpretable, it has well-known limitations for binary outcomes: fitted values may fall outside $[0,1]$, residuals are heteroscedastic, and normality assumptions are violated. Additionally, influential observations may affect coefficient stability. These limitations motivate the use of logistic regression as a more appropriate model for binary response prediction and inference.
+
+\subsection{Conclusion}
+The linear regression analysis identifies previous campaign acceptance, customer recency, online engagement, and selected household/demographic and spending variables as key drivers of campaign response. The LPM provides a clear and interpretable baseline, and diagnostic analysis supports transitioning to logistic regression for a more suitable modelling framework.
